# libowl-av

./: COPYING  ChangeLog  Makefile.am  configure.ac  libowl-av.pc.in  libowl-av.vapi  owl-video-widget.pc.in  owl-video-widget.vapi
examples/: Makefile.am  owl-overlay-bin.c  owl-overlay-bin.h
libowl-av/: Makefile.am  owl-audio-player.c  owl-audio-player.h  owl-tag-reader.c  owl-tag-reader.h  owl-video-widget.c
src/: Makefile.am  libowl-video-widget.pc.in  owl-overlay-bin.c  owl-overlay-bin.h  owl-video-widget.c  owl-video-widget.h  video.c
